# zeyaddeeb

./: .gitignore  README.md  moon.yml
.github/: CODEOWNERS
.github/workflows/: deploy.yml
.moon/: workspace.yml
.moon/hooks/: pre-commit.sh
crdt/: Cargo.toml  Dockerfile  moon.yml
crdt/deployments/: main.tf  overrides.yaml
crdt/deployments/helm/: Chart.yaml  values.yaml
crdt/deployments/helm/templates/: deployment.yaml  httproute.yaml  ingress.yaml  serviceaccount.yaml
crdt/src/: crdt.rs  db.rs  main.rs  state.rs  ws.rs
deployments/: data.tf  deployments.tf  locals.tf  namespace.tf  shared_secrets.tf  terraform.tf  variables.tf
robot/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  moon.yml
robot/deployments/: main.tf
robot/deployments/helm/: Chart.yaml  values.yaml
robot/deployments/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
robot/deployments/values/: robot-web.overrides.yaml  robot-ws.overrides.yaml
robot/src/: camera.rs  lib.rs  main.rs  server.rs  ui.rs  wasm.rs
robot/src/rl/: agent.rs  async_trainer.rs  buffer.rs  config.rs  mod.rs  networks.rs  noise.rs  sac_agent.rs  sac_async_trainer.rs
robot/src/robot/: builder.rs  components.rs  constants.rs  mod.rs  observation.rs  reset.rs  resources.rs  setup.rs  state.rs  torque.rs  training.rs  wasm_bridge.rs  zenoh_bridge.rs
robot/web/: index.html
www/: .dockerignore  Dockerfile  biome.json  docker-compose.yml  moon.yml  package.json  turbo.json
www/apps/blog/: next.config.js  package.json  proxy.ts
www/apps/blog/app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
www/apps/blog/app/posts/: blog-content.tsx  page.tsx
www/apps/blog/app/posts/[slug]/: blog-post-detail.tsx  page.tsx
www/apps/blog/app/things-i-like/: page.tsx  things-i-like-content.tsx
www/apps/blog/app/things-i-like/[slug]/: collection-item-detail.tsx  page.tsx
www/apps/blog/app/write/: client.tsx  page.tsx
www/apps/blog/app/write/collection/: client.tsx  page.tsx
www/apps/blog/components/: collection-card.tsx  collection-grid.tsx  filter-bar.tsx  index.ts  markdown-editor.css  markdown-editor.tsx  markdown-renderer.tsx
www/apps/blog/lib/: auth.ts  collection-utils.tsx  redirect-utils.ts  write-helpers.tsx
www/apps/blog/lib/actions/: auth.ts  blog.ts  collections.ts  index.ts  write.ts
www/apps/blog/lib/hooks/: scroll-to-top.tsx
www/apps/blog/public/: llms.txt
www/apps/blog/types/: css.d.ts
www/apps/www/: .dockerignore  .gitignore  eslint.config.js  next.config.js  package.json  postcss.config.js  tsconfig.json
www/apps/www/app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
www/apps/www/app/(home)/: page.tsx
www/apps/www/app/(site)/: layout.tsx
www/apps/www/app/about/: page.tsx
www/apps/www/app/experiments/: page.tsx
www/apps/www/app/resume/: layout.tsx  page.tsx
www/apps/www/app/story/: layout.tsx  page.tsx
www/apps/www/components/: custom-cursor.tsx  footer.tsx  header.tsx  intro-screen.tsx  root-layout.tsx
www/apps/www/lib/hooks/: use-crdt.tsx  use-mount-effect-once.tsx  use-wasm.tsx
www/apps/www/lib/providers/: app-provider.tsx  wasm-provider.tsx
www/apps/www/public/: llms.txt
www/apps/www/types/: lenis.d.ts  wasm.d.ts
www/deployments/: main.tf
www/deployments/helm/: Chart.yaml  values.yaml
www/deployments/helm/templates/: deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  seed-job.yaml  serviceaccount.yaml
www/deployments/values/: blog.overrides.yaml  www.overrides.yaml
(+23 files in other folders)
