[package]
name = "crdt"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "crdt"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
surrealdb = { version = "3.0.5", features = ["kv-mem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.1", features = ["v4", "fast-rng"] }
dashmap = "6.2.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
futures-util = "0.3.32"
anyhow = "1.0.102"
