[package]
name = "robot"
version = "0.2.2"
edition = "2021"

[features]
default = ["native"]
native = [
    "dep:zenoh",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:futures-util",
]
wasm = []

[[bin]]
name = "robot"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "robot-wasm"
path = "src/wasm.rs"
required-features = ["wasm"]

[[bin]]
name = "ws-server"
path = "src/server.rs"
required-features = ["native"]

[dependencies]
bevy = { version = "0.18.1" }
bevy_mesh = "0.18.1"
avian3d = "0.6.1"
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
rmp-serde = "1.3"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
anyhow = "1.0"
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
zenoh = { version = "1.9.0", optional = true }
tokio = { version = "1.52.3", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }
futures-util = { version = "0.3.32", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.99", features = [
    "console",
    "Location",
    "Window",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "BinaryType",
] }
console_error_panic_hook = "0.1"
js-sys = "0.3.99"
